--- a/web/css/style.css
+++ b/web/css/style.css
@@ -74,7 +74,15 @@ header h2 {
   text-align: center;
 }
 .diagram {
-  width: 500px;
-  height: 310px;
+  width: 700px;
+  height: 510px;
   border: solid 1px #000000;
+  position: relative;
+}
+.diagram svg {
+  position: absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
 }
