--- a/web/css/style.css
+++ b/web/css/style.css
@@ -53,14 +53,16 @@ header h2 {
   color: #202020;
 }
 .editor {
-  width: 600px;
-  height: 310px;
+  width: 100%;
+  height: 100%;
   font-size: 14px;
 }
 .editor-wrapper {
   width: 600px;
   height: 310px;
   border: solid 1px #000000;
+  resize: both;
+  overflow: auto;
 }
 .inner {
   position: relative;
@@ -76,11 +78,14 @@ header h2 {
 .diagram {
   width: 700px;
   height: 510px;
+  min-width: 300px;
+  min-height: 300px;
   border: solid 1px #000000;
   position: relative;
+  resize: both;
+  overflow: auto;
 }
 .diagram svg {
-  position: absolute;
   left:0;
   top:0;
   width:100%;
