Improve manual generation
Include list of examples in examples/ directory.

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -28,7 +28,9 @@
 <h2>Examples</h2>
 
 <ul>
-  <li><a href="../?load=examples/skills1-1.skate">Skills 1-1</a></li>
+{{#each examples}}
+<li><a href="../?load=examples/{{this}}">{{this}}</a></li>
+{{/each}}
 </ul>
 
 <h2>Move Reference</h2>
