--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -36,7 +36,10 @@
 <h2>Move Reference</h2>
 {{#each infos}}
 <h3>{{this.name}}</h3>
-<p>{{this.summary}}
+<p>{{this.summary}}</p>
+{{#if this.visible}}
+<div class="example"><img src="{{this.name}}.svg" height="200"/></div>
+{{/if}}
 {{#if this.params}}
 <h4>Parameters</h4>
 {{/if}}
