Add url parameters for width x height

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -29,7 +29,7 @@
 
 <ul>
 {{#each examples}}
-<li><a href="../?load=examples/{{this}}">{{this}}</a></li>
+<li><a href="../?w=800px&h=1200px&edh=1100px&load=examples/{{this}}">{{this}}</a></li>
 {{/each}}
 </ul>
 
