--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -38,7 +38,7 @@
 <h3>{{this.name}}</h3>
 <p>{{this.summary}}</p>
 {{#if this.visible}}
-<div class="example"><img src="{{this.name}}.svg" height="200"/></div>
+<div class="example"><img src="{{this.example}}.svg" height="200"/></div>
 {{/if}}
 {{#if this.params}}
 <h4>Parameters</h4>
