--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -27,6 +27,7 @@
 
 <h2>Examples</h2>
 
+<p>Example diagrams that approximately match <a href="https://www.iceskating.org.uk/skills">British Ice Skating's Skills tests</a>:
 <ul>
 {{#each examples}}
 <li><a href="../?w=800px&h=1200px&edh=1100px&load=examples/{{this}}">{{this}}</a></li>
