--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -6,24 +6,61 @@
 <h1>Skating Diagram Creator</h1>
 
 <h2>Overview</h2>
-<p>To build a skating diagram, enter move codes into the text entry box.  Each move should be on a new line, or separated from the previous move by a semi-colon <b><code>;</code></b>
 
-<p>Blank lines are ignored, and anything after a hash <b><code>#</code></b> on a line is treated as a comment and ignored.
+<p>This page allows interactive creation of skating choreography diagrams.
 
-<p>Move codes are typically made up of:
+<p>To build a skating diagram, enter <i>move codes</i> into the text entry box, one per line (or separated from the
+  previous move by a semi-colon <b><code>;</code></b>).  A move code is typically a three letter code denoting the
+  skating edge, optionally followed by an abbreviation for the move being performed. Blank lines are ignored, and
+  anything after a hash (<b><code>#</code></b>) on a line is treated as a comment and ignored.
+
+<p>For example, the code <a href="#ref-Bracket"><b><code>LFO-Br</code></b></a> indicates a bracket turn being performed
+  from a left forward outside edge, thus ending on a left backward inside (<code>LBI</code>) edge.
+
+<p>As a shorthand, moves can be made longer or shorter by appending up to 3 plus (<b><code>+</code></b>) or minus
+  (<b><code>-</code></b>) signs, for example <code>LFO-Rk++</code>.  Moves can also be made to turn more or less tightly
+  by appending up to 3 greater-than (<b><code>&gt;</code></b>) or less-than (<b><code>&lt;</code></b>) signs, for
+  example <code>RBI-Ctr&lt;&lt;</code>.
+
+<p>It's also possible to more precisely control exactly how big or tightly curved a particular move is. A move can be
+  followed by a comma-separated list of <i>parameters</i> enclosed in square brackets, e.g. <code>LFO
+  [len=350,angle=90]</code>.  The allowed parameters for each move are described in the <a href="#reference">Move
+  Reference</a> section below.
+
+<p>To sum up, skating move codes are typically made up of:
 <ul>
   <li>An optional prefix, indicating how a change of foot is performed.  For example: <ul>
     <li>a <code>wd-</code> prefix indicates a wide step</li>
     <li>a <code>xf-</code> prefix indicates a cross in front</li>
     <li>a <code>xb-</code> prefix indicates a cross behind</li>
    </ul></li>
-  <li>An edge code, indicating the skating foot, direction, and edge.  For example, <code>LBO</code> indicates skating on the left foot, travelling backwards on an outside edge.</li>
-  <li>An optional suffix indicating a move, turn or foot change.  For example, <code>LFO3</code> indicates a three-turn from a left forward outside edge, transitioning to a left backward inside edge.</li>
+  <li>An edge code, indicating the skating foot, direction, and edge.  For example, <code>LBO</code> indicates skating
+  on the left foot, travelling backwards on an outside edge.</li>
+  <li>An optional suffix indicating a move, turn or foot change.  For example, <code>LFO3</code> indicates a three-turn
+  from a left forward outside edge, transitioning to a left backward inside edge.</li>
   <li>Further optional suffices that adjust parameters for the move.  These can take two forms:<ul>
-    <li>A collection of comma-separated <code>name=value</code> parameters enclosed in square brackets.  For example, <code>LFO [curve=120,len=900]</code> indicates a left forward outside edge that turns 120&deg; and travels 900 cm.</li>
-    <li>Short code markers that adjust the most common parameters.  For example, <code>LFO>>++</code> indicates a left forward edge that curves more and travels further than the default.</li>
+    <li>A collection of comma-separated <code>name=value</code> parameters enclosed in square brackets.  For
+    example, <code>LFO [curve=120,len=900]</code> indicates a left forward outside edge that turns 120&deg; and travels
+    900 cm.</li>
+    <li>Short code markers that adjust the most common parameters.  For example, <code>LFO>>++</code> indicates a left
+    forward edge that curves more and travels further than the default.</li>
   </ul></li>
 </ul>
+
+<h2>Diagram Commands</h2>
+
+<p>A skating diagram can also include commands that relate to the layout of the diagram, rather than to a particular
+  skating move.  For example, including <code>Rink</code> incorporates an ice rink layout on the diagram,
+  and <code>Title</code> adds a title for the diagram.
+
+<p>The <a href="#ref-Info"><code>Info</code></a> is worth specifically mentioning; this allows various layout helpers
+  to be enabled, including a grid, and markers for the position and direction of the skater at the start and end of each
+  move.
+
+<p>The position and direction of the skater at each point is particularly relevant for
+  the <a href="#ref-Shift"><code>Shift</code></a> command, because it moves and rotates the skater relative to their
+  current position/direction.  (In contrast, the <a href="#ref-Warp"><code>Warp</code></a> command moves the skater to
+  an absolute position and direction on the diagram.)
 
 <h2>Examples</h2>
 
@@ -34,16 +71,21 @@
 {{/each}}
 </ul>
 
-<h2>Move Reference</h2>
+<a id="reference"/><h2>Move Reference</h2>
+
+
 {{#each infos}}
-<h3>{{this.name}}</h3>
+<a id="ref-{{this.name}}"/><h3>{{this.name}}</h3>
 <p>{{this.summary}}</p>
+
 {{#if this.visible}}
 <div class="example"><img src="{{this.example}}.svg" height="200"/></div>
 {{/if}}
+
 {{#if this.params}}
 <h4>Parameters</h4>
 {{/if}}
+
 <ul>
 {{#each this.params}}
 <li><code>{{this.name}}</code>: {{this.doc}}
@@ -67,6 +109,7 @@ Can also be modified by a <code>&lt;</code> or <code>&gt;</code> (repeated) suff
 </li>
 {{/each}}
 </ul>
+
 {{/each}}
 
 </body>
