Add explicit discriminant to JSON output
Handlebars can only branch on truthy/falsy values, so the template
can't find a default parameter whose value is Bool(false), Text("") or
Number(0).

Modify the generated JSON to include an explicit discriminant value
in the default field, and use this instead.

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -129,13 +129,13 @@ tests</a> and dance choreographies:
         <ul>
           {{#each this.params}}
           <li><code>{{this.name}}</code>: {{this.doc}}
-          {{#if this.default.Number}}
+          {{#if this.default.isNumber}}
           (default <code>{{this.default.Number}}</code>).
           {{/if}}
-          {{#if this.default.Text}}
+          {{#if this.default.isText}}
           (default <code>"{{this.default.Text}}"</code>).
           {{/if}}
-          {{#if this.default.Boolean}}
+          {{#if this.default.isBoolean}}
           (default <code>{{this.default.Boolean}}</code>).
           {{/if}}
           {{#if this.short}}
