doc: add tutorial

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -92,7 +92,7 @@ should hold for 2 beats.
 <p>The <a href="#ref-Info"><code>Info</code></a> command includes an <b><code>auto-count</code></b> parameter that turns
   on automatic numbering of skating moves.
 
-<h2>Examples</h2>
+<a name="examples"><h2>Examples</h2></a>
 
 <p>Example diagrams that approximately match <a href="https://www.iceskating.org.uk/skills">British Ice Skating's Skills
 tests</a> and dance choreographies:
