--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -3,7 +3,7 @@
 <head>
   <head>
     <meta charset='utf-8'>
-    <link rel="stylesheet" type="text/css" href="../css/manual.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/manual.css" media="screen" />
 
     <title>Skating Diagram Creator</title>
     <link rel="canonical" href="https://lurklurk.org/skreate/doc/manual.html" />
@@ -15,7 +15,7 @@
 
 <h2>Overview</h2>
 
-<p><a href="../">This page</a> allows interactive creation of skating choreography diagrams.
+<p><a href="index.html">This page</a> allows interactive creation of skating choreography diagrams.
 
 <p>To build a skating diagram, enter <i>move codes</i> into the text entry box, one per line (or separated from the
   previous move by a semi-colon <b><code>;</code></b>).  A move code is typically a three letter code denoting the
@@ -98,7 +98,7 @@ should hold for 2 beats.
 tests</a> and dance choreographies:
 <ul>
 {{#each examples}}
-<li><a href="../?w=800px&h=1200px&edh=1100px&load=examples/{{this}}">{{this}}</a></li>
+<li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/{{this}}">{{this}}</a></li>
 {{/each}}
 </ul>
 
@@ -122,7 +122,7 @@ tests</a> and dance choreographies:
       <td>{{this.summary}}</td>
       <td class="center">
         {{#if this.visible}}
-        <div class="example"><a href="../preview.html?text={{this.example}}"><img src="{{this.example}}.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text={{this.example}}"><img src="doc/{{this.example}}.svg" height="150"/></a></div>
         {{/if}}
       </td>
       <td>
