manual: make parameter names bold

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -118,7 +118,7 @@ should hold for 2 beats.
       <td>
         <ul>
           {{#each this.params}}
-          <li><code>{{this.name}}</code>: {{this.doc}}
+          <li><b><code>{{this.name}}</code></b>: {{this.doc}}
           {{#if this.default.isNumber}}
           (default <code>{{this.default.Number}}</code>).
           {{/if}}
