manual: add alt attribute to images

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -110,7 +110,7 @@ should hold for 2 beats.
       <td>{{this.summary}}</td>
       <td class="center">
         {{#if this.visible}}
-        <div class="example"><a href="./preview.html?text={{this.example}}"><img src="doc/{{this.example}}.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text={{this.example}}"><img src="doc/{{this.example}}.svg" height="150" alt="{{this.name}}"/></a></div>
         {{/if}}
       </td>
       <td>
