manual: fix incorrect anchor tag

--- a/doc/manual.hbs
+++ b/doc/manual.hbs
@@ -104,7 +104,7 @@ should hold for 2 beats.
   </thead>
   <tbody>
     {{#each infos}}
-    <a id="ref-{{this.escapedName}}"/><tr>
+    <tr id="ref-{{this.escapedName}}">
       <td class="center">
         <b><code>{{this.example}}</code></b>
       </td>
